--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
+        <junit-jupiter.version>5.9.0</junit-jupiter.version>
+        <docker.image.prefix>niki1994</docker.image.prefix>
+        <docker.image.suffix></docker.image.suffix>
     </properties>
 
     <dependencies>
@@ -99,6 +102,23 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.2</version>
+            <configuration>
+                <source>17</source>
+                <target>17</target>
+            </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.3.4</version>
+                <configuration>
+                    <repository>${docker.image.prefix}/${project.artifactId}${docker.image.suffix}</repository>
                 </configuration>
             </plugin>
         </plugins>
