--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,42 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <!-- CHANGE IT 0.8.7-->
+                <version>0.8.5</version>
+                <executions>
+                    <execution>
+                        <!--<id>default-prepare-agent</id>-->
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <!--<id>default-report</id>-->
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <inherited>true</inherited>
+                <configuration>
+                    <append>true</append>
+                    <!--suppress UnresolvedMavenProperty -->
+                    <destFile>${sonar.jacoco.reportPath}</destFile>
+                    <propertyName>surefireArgLine</propertyName>
+                    <excludes>
+                        <exclude>**/com/eca/catalog/dto/**(</exclude>
+                        <exclude>**/com/eca/catalog/entity/**(</exclude>
+                        <exclude>**/com/eca/catalog/config/**(</exclude>
+                        <exclude>**/com/eca/catalog/exception/**(</exclude>
+                    </excludes>
+                </configuration>
+
+            </plugin>
+            <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.2</version>
